# web3-calyptus-sol

./: .gitignore  README.md  package-lock.json
anchor-solana-nft/: Anchor.toml
anchor-solana-nft/programs/anchor-solana-nft/: Cargo.toml
anchor-solana-nft/programs/anchor-solana-nft/src/: lib.rs
anchor-solana-nft/tests/: anchor-solana-nft.ts
android-dapp/: build.gradle.kts  settings.gradle.kts
android-dapp/app/: build.gradle.kts
android-dapp/gradle/wrapper/: gradle-wrapper.properties
dexterity-hxro/src/components/: AppBar.tsx  Button.tsx  ContentContainer.tsx  DefaultInfo.tsx  Footer.tsx  Input.tsx  Notification.tsx  RequestAirdrop.tsx
dexterity-hxro/src/contexts/: ContextProvider.tsx  DexterityProviders.tsx
dexterity-hxro/src/pages/: _app.tsx  basics.tsx
lend-borrow/: Anchor.toml  package-lock.json  package.json
lend-borrow/tests/: lend-borrow.ts
nft-collection/: cache.json  config.json  summary.txt
solana-security-challenges/: Anchor.toml  package-lock.json  package.json
solana-security-challenges/tests/: solquad.ts
telegram-bot/dexterity-bot/: bun.lockb
telegram-bot/trades-webhook/: app.py
todo-list-app/: Anchor.toml
todo-list-app/tests/: todo-list-app.ts
trading-bot-phoenix/: package-lock.json  package.json  tsconfig.json
trading-bot-phoenix/src/: index.ts
ts-token-solana/: package-lock.json  package.json
ts-token-solana/src/: helpers.ts  main.ts
waffle-maker/: Anchor.toml
waffle-maker/programs/waffle-maker/: Cargo.toml
waffle-maker/programs/waffle-maker/src/: lib.rs
waffle-maker/tests/: waffle-maker.ts
(+42 files in other folders)
