[package]
name = "anchor-solana-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_solana_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
toml_edit = "=0.21.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
ahash = "=0.8.6"
solana-program = "=1.16.13"
borsh = "0.9.3"
borsh-derive = "0.9.3"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint",
] }
