[package]
name = "waffle-maker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "waffle_maker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
toml_edit = "=0.21.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
ahash = "=0.8.6"
solana-program = "=1.16.13"
borsh = "0.9.3"
borsh-derive = "0.9.3"
